--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,12 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/three": "^0.165.0",
+    "bootstrap": "^5.3.3",
     "framer-motion": "^11.2.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "shadergradient": "^1.2.14",
-    "three": "^0.165.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
